2009-03-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Added silk
	  icons to about dialog.

2009-03-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs:
	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs:
	  Reset the transaction store field of the tree before
	  committing, since while committing there may be further
	  changes in the tree, and those should not be done using the
	  current store. Fixes bugs #481179 and #479158.

2009-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Removed dead web page link from
	  main menu, added new ones.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs: Make
	  use of template icon.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: Fixed "Bug 444416 -
	  CTRL+TAB should switch between files in same order as they
	  were opened". Taken the patch from David Goemans
	  <dgoemans@gmail.com> and many good ideas from Michael
	  Hutchinson (but not all ^^).

2009-03-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Search/FilesDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/DirectoryDocumentIterator.cs:
	  Skip over files that aren't text files.

2009-03-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Search/CurrentProjectDocumentIterator.cs:
	  Saner implementation. Don't add duplicate files.

2009-03-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Partial
	  workaround for results that have a bad encoding.

2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Remove unused dialog.

2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: